# llm-ginatayomi-evaluation

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  promptfooconfig.yaml  prompts.txt  pyproject.toml
.devcontainer/: compose.dev.yaml  devcontainer.json
data/: ginatayomi_test.csv
outputs/: result_ginatayomi_test.csv
src/: convert_csv2yaml_test.py
tests/: ginatayomi_test.yaml
